--- a/1.html
+++ b/1.html
@@ -12,7 +12,7 @@
     <li><a href="1.html" target="_blank" title="등장인물"> 등장인물 </a></li>
     <li><a href="2.html" target="_blank" title="프로그램소개"> 프로그램소개 </a></li>
 </ul>
-
+<iframe src="https://timemapper.okfnlabs.org/anon/g196u5-?embed=1" frameborder="0" style="border: none;" width="100%" height="780;"></iframe>
 <h3>
 <ul> 
     <li>고애신</li>
